# AssimpDemo

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bzf/assimpdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: assimpLoader.cpp  myGLFunctions.cpp  myGLFunctions.h
app/src/main/cpp/include/glm/gtx/: matrix_factorisation.inl
app/src/main/cpp/include/opencv2/: imgproc.hpp
app/src/main/cpp/include/opencv2/core/: cuda.hpp  softfloat.hpp
app/src/main/cpp/include/opencv2/gapi/: gcomputation.hpp
app/src/main/cpp/include/opencv2/gapi/fluid/: gfluidkernel.hpp
app/src/main/cpp/jni/: ActivityJni.cpp  GLRendererJni.cpp  GestureJni.cpp
app/src/main/java/com/bzf/assimpdemo/: GestureClass.kt  MainActivity.kt  MyGLRenderer.kt  MyGLSurfaceView.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bzf/assimpdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
